--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-tooltip": "^4.2.19",
     "sass": "^1.32.12",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
